--- a/package.json
+++ b/package.json
@@ -3,22 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^2.11.0",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@fullcalendar/core": "^5.9.0",
     "@fullcalendar/daygrid": "^5.9.0",
     "@fullcalendar/interaction": "^5.9.0",
     "@fullcalendar/list": "^5.9.0",
+    "@fullcalendar/moment-timezone": "^5.9.0",
     "@fullcalendar/react": "^5.9.0",
     "@fullcalendar/timegrid": "^5.9.0",
     "@mui/icons-material": "^5.0.1",
-    "@mui/material": "^5.0.2",
+    "@mui/lab": "^5.0.0-alpha.50",
+    "@mui/material": "^5.0.3",
     "@mui/styled-engine-sc": "^5.0.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "connected-react-router": "6.8.0",
     "firebase": "^9.1.1",
+    "firebase-tools": "^9.20.0",
+    "global": "^4.4.0",
     "history": "4.10.1",
     "immer": "^9.0.6",
     "lodash": "^4.17.21",
